Forgot password, MainActivity, Register

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="50dp"
+    android:padding="30dp"
     tools:context=".ForgotPassword">
 
     <TextView
         android:id="@+id/tvFP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password"
-        android:textSize="30sp">
+        android:text="Forgot your password?"
+        android:textSize="40px"
+        android:textStyle="bold">
     </TextView>
 
 
@@ -21,21 +22,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvFP"
-        android:layout_marginTop="30sp"
-        android:hint="Password"
-        android:inputType="textPassword">
+        android:layout_marginTop="40sp"
+        android:hint="Your email here"
+        android:inputType="textEmailAddress">
     </EditText>
 
     <Button
         android:id="@+id/btnNewPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Set Password"
-        android:textSize="25sp"
+        android:text="Reset Password"
+        android:textSize="25px"
         android:textColor="@android:color/background_light"
         android:layout_below="@+id/newPass"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="20sp"
         android:background="#E91E63"
         ></Button>
+
+    <TextView
+        android:id="@+id/back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:textSize="35px"
+        android:textColor="@android:color/holo_blue_dark"
+        android:layout_below="@+id/btnNewPass"
+        android:layout_marginTop="20sp"
+        android:gravity="center">
+    </TextView>
 
 </RelativeLayout>
