--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:padding="30dp"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo"
-        ></ImageView>
+  <TextView
+      android:id="@+id/tv1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="SIGN IN"
+      android:textSize="40px"
+      android:textStyle="bold">
+  </TextView>
+
+
+
+  <EditText
+      android:id="@+id/EdtEmail"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/tv1"
+      android:layout_marginTop="10sp"
+      android:inputType="textEmailAddress"
+      android:hint="Email"
+      >
+  </EditText>
+
+
+  <EditText
+      android:id="@+id/EdtPass"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/EdtEmail"
+      android:layout_marginTop="10sp"
+      android:hint="Password"
+      android:inputType="textPassword">
+  </EditText>
+
+  <Button
+      android:id="@+id/SignIn"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Sign In"
+      android:textSize="30px"
+      android:textColor="@android:color/background_light"
+      android:layout_below="@+id/EdtPass"
+      android:layout_marginTop="20sp"
+      android:background="#E91E63"
+      ></Button>
+
+  <TextView
+      android:id="@+id/tvForgotPass"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/SignIn"
+      android:text="Forgot Password?"
+      android:textSize="30px"
+      android:textColor="@android:color/holo_blue_dark"
+      android:layout_marginTop="10sp"
+      android:gravity="center">
+  </TextView>
+
+  <Button
+      android:id="@+id/google"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/tvForgotPass"
+      android:layout_marginTop="20sp"
+      android:background="#FF0000"
+      android:drawableLeft="@drawable/googleg_standard_color_18"
+      android:gravity="center"
+      android:padding="20px"
+      android:text="Sign in with Google"
+      android:textColor="@android:color/background_light"
+      android:textSize="30px"
+      android:textStyle="bold">
+  </Button>
+
+  <Button
+      android:id="@+id/facebook"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/google"
+      android:layout_marginTop="10sp"
+      android:drawableLeft="@drawable/facebook"
+      android:background="#004182"
+      android:gravity="center"
+      android:padding="20px"
+      android:text="Sign in with Facebook"
+      android:textColor="@android:color/background_light"
+      android:textSize="30px"
+      android:textStyle="bold"></Button>
+
+  <TextView
+      android:id="@+id/tv2"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/facebook"
+      android:text="-------- OR --------"
+      android:textSize="40px"
+      android:layout_marginTop="10sp"
+      android:gravity="center">
+  </TextView>
+
+  <Button
+      android:id="@+id/btnSinUp"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/tv2"
+      android:layout_marginTop="10sp"
+      android:text="Sign Up"
+      android:textSize="30px">
+  </Button>
 
 </RelativeLayout>
